== Version 2.8 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # A detail-view for RelationType has been created; an interesting feature is
      the display of all entities linked by the concerned type, mixing all entity types.
    # The management of recent entities has been rework. They are now stored in their own table
      (their were stored in the user's session) & so their are shared between the different
      sessions of a user. The setting value 'MAX_LAST_ITEMS' has been removed;
      use the new values 'LAST_ENTITIES_SIZE' & 'LAST_ENTITIES_MENU_SIZE' instead.
      A block "Recent entities" is now available for Home; it displays more
      entities than the menu entry.
    # A user can now pin its favorite entities (up to 9 in the default configuration,
      see 'settings.PINNED_ENTITIES_SIZE'). Pinned entities are displayed in the new
      menu entry "Quick access" which displayed the recent entities too.
      A block "Pinned entities" is now available for Home.
    # Apps :
        * Creme_config :
            - The regular Users can now have several roles. Only one role is active (to compute
              the current permissions), but they can switch their current role to another one.
            - The Users store now the date of their deactivation.
            - The Roles get a new permission: listable models
              (i.e. it allows you to access the list-views of a model).
              The existing roles are migrated to keep the old behaviour: they get
              list permissions for all models belonging to allowed apps.
            - The Roles can now have special permissions.
              Two special permissions have been introduced : "User management" & "Role configuration".
            - The Roles can now be disabled.
            - In the fields' configuration, fields can now be set as required but only at creation.
            - The CustomFields can now get: